some updates to the reports base and tests - simplify the result classes - we need a factory component for the query layer, because the query layer needs a repository - added a mock implementation of the reporter (removed the "default" one which is the same) - added a default repository query interface that uses the file system - add a test for the metadata versions not matching the repo - add some comments
git-svn-id: https://svn.apache.org/repos/asf/maven/repository-manager/trunk@353954 13f79535-47bb-0310-9956-ffa450edef68